[package]
name = "lua_obfuscator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.7.3"
lua_deserializer = { git = "https://github.com/PY44N/LuaDeserializer" }
magic-crypt = "3.1.12"
